<resources>
    <string name="app_name">Open E-Dope</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Saved Cards</string>
    <string name="menu_manage">Manage Data</string>
    <string name="open_e_dope">Open E-Dope</string>
    <string name="stage_name">Stage Name</string>
    <string name="stage_notes_n_eg_shoot_to_move_hit_to_move_n_etc">stage notes \n Eg. Shoot to Move/Hit to Move \n ETC.</string>
    <string name="show_hide_lead">Show/Hide Lead</string>
    <string name="event_name">Event Name</string>
    <string name="vertical_display_orientation">Vertical Display Orientation</string>
    <string name="horizontal_display_orientation">Horizontal Display Orientation</string>
    <string name="screen_size">Screen Options</string>
    <string name="show_1_wind_hold">Show 1 wind hold</string>

</resources>