<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="409dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="330dp"
        android:layout_height="10dp"
        app:barrierDirection="top" />

    <Switch
        android:id="@+id/Vertical_Orientation_Switch"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:text="@string/vertical_display_orientation"
        android:textOff="@string/horizontal_display_orientation"
        android:textOn="@string/vertical_display_orientation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_settings"
        tools:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize,VisualLintBounds" />

    <TextView
        android:id="@+id/screen_size"
        android:layout_width="409dp"
        android:layout_height="24dp"
        android:text="@string/screen_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vertical_Orientation_Switch"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/settings_screen_size_spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:entries="@array/screen_size_options"
        android:minHeight="48dp"
        android:saveEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_size" />

</androidx.constraintlayout.widget.ConstraintLayout>